--- a/clicky-game/src/components/Footer/style.css
+++ b/clicky-game/src/components/Footer/style.css
@@ -1,6 +1,6 @@
 .footer {
   background: 
-  #6956AF;
+  rgb(185, 100, 100);
   height: 100px;
   position: relative;
   color: white;
@@ -12,7 +12,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background:#5138A1;
+  background:rgb(13, 13, 14);
   padding: 8px;
   font-weight: 600;
 }
